<?xml version="1.0" encoding="utf-8"?>
<!-- 1910047 Ziang Zhao -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/result"
        android:layout_marginBottom="14dp"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_assessment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="cursive"
        android:text="@string/assessment"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="272dp"
        android:layout_height="213dp"
        app:srcCompat="@drawable/images"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tv_congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/congratulations"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_name_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        tools:text="Your score is 9 out of 10 " />


    <Button
        android:id="@+id/btn_finish"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:background="#513FB5"
        android:drawableStart="@drawable/ic_baseline_child_care_24"
        android:fontFamily="casual"
        android:text="@string/redo_quiz"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

</LinearLayout>

